--- a/index.html
+++ b/index.html
@@ -241,7 +241,16 @@
                       }
                     }
                   },
-
+                  scales: {
+                    xAxes: [{
+                      gridLines : {
+                        display : false
+                      },
+                      ticks: {
+                        display: false
+                      }
+                    }]
+                  },
             			elements: {
             				point: {
             					backgroundColor: colors[types.indexOf(categ_default)],
